--- a/configs/.env.dev
+++ b/configs/.env.dev
@@ -3,3 +3,5 @@ RDS_REPLICA_HOST=study-hub-master.cntchsiweh3e.ap-northeast-2.rds.amazonaws.com
 RDS_PORT=3306
 RDS_USER=admin
 RDS_PASSWORD=studyhub
+
+MYSQL_DB_NAME=studyhub
