--- a/cmd/app/makefile
+++ b/cmd/app/makefile
@@ -1,5 +1,5 @@
 schema:
-	go-bindata -ignore=\.go -pkg=schema -o=../../api/app/schema/bindata.go ../../api/app/schema/...
+	go-bindata -ignore=\.go -pkg=schema -o=../../api/app/schema/bindata.go ../../api/app/schema/... ../../internal/graphql/schema/...
 
 run:
 	go run main.go
